--- a/config/locales/enum.pt-BR.yml
+++ b/config/locales/enum.pt-BR.yml
@@ -4,3 +4,20 @@
       role:
         full_access: Acesso Completo
         restricted_access: Acesso Restrito
+    order:
+      status:
+        requested: Solicitado
+        waiting: Aguardando Pagamento
+        analysing: Em Análise
+        paid: Pago
+        avaliable: Disponível
+        dispute: Em Disputa
+        returned: Devolvido
+        canceled: Cancelado
+        debited: Debitado
+        temporary_retention: Retenção Temporária
+    ad:
+      status:
+        active: Ativo
+        processing: Processando
+        sold: Finalizado
